# python-cli-chat

./: .gitignore  README.md  RUN_DEMO.md  SERVER_LOGS-20260713-103139.txt  SERVER_LOGS-20260713-103318.txt  pyproject.toml  requirements.txt
.github/workflows/: build-client.yml  build-pythonchat.yml  build-server.yml
src/: client.py  entities.py  server.py  threading_manager.py  utils.py
src/chat_app_python.egg-info/: PKG-INFO  SOURCES.txt
src/client/: client.py
src/client/ui/components/: button.py  card.py  message_log.py  theme.py  title.py
src/client/ui/pages/: chat.py  create_room.py  main.py  rooms.py  setup.py  welcome.py
src/client/ui/styles/: styles.css
src/server/: server.py
src/shared/: entities.py  utils.py
